--- a/src/EmpresaBundle/Resources/config/routing.yml
+++ b/src/EmpresaBundle/Resources/config/routing.yml
@@ -17,6 +17,12 @@ new_empresa:
     path:     /Empresa/new
     defaults: { _controller: EmpresaBundle:Empresa:new }
 
+new_Profesor:
+    path:     /Profesor/new
+    defaults: { _controller: EmpresaBundle:Profesor:new }
+
+
+
 
 search_empresa:
     path:     /apiEmpresa/all
