--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+user:
+    resource: "@UserBundle/Resources/config/routing.yml"
+    prefix:   /
+
 empresa:
     resource: "@EmpresaBundle/Resources/config/routing.yml"
     prefix:   /
