--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -4,6 +4,8 @@ imports:
     - { resource: services.yml }
     - { resource: "@EmpresaBundle/Resources/config/services.yml" }
     - { resource: "@UserBundle/Resources/config/services.yml" }
+    - { resource: "@AdminBundle/Resources/config/services.yml" }
+    - { resource: "@ConfigBundle/Resources/config/services.yml" }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
