--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,11 @@
+config:
+    resource: "@ConfigBundle/Resources/config/routing.yml"
+    prefix:   /
+
+admin:
+    resource: "@AdminBundle/Resources/config/routing.yml"
+    prefix:   /admin
+
 user:
     resource: "@UserBundle/Resources/config/routing.yml"
     prefix:   /
@@ -6,9 +14,14 @@ empresa:
     resource: "@EmpresaBundle/Resources/config/routing.yml"
     prefix:   /
 
+
+
 app:
     resource: "@AppBundle/Controller/"
     type:     annotation
 
 logout:
     path: /logout
+
+logout_admin:
+    path: /admin/logout
